--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "index.js",
-  "scripts": {
+    "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
@@ -8,18 +8,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "~39.0.2",
-    "expo-splash-screen": "~0.6.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.9.0",
+    "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
+    "expo": "^39.0.0",
+    "expo-splash-screen": "~0.6.1",
     "expo-status-bar": "~1.0.2",
-    "expo-updates": "~0.3.2",
+    "expo-updates": "~0.3.3",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.2",
+    "react-native": "0.63.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12"
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-web": "~0.13.7"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
