--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "version": "1.4.5",
     "splash":{
       "image":  "./_Images/logo800x800_steth.png", 
-      "resizeMode": "cover"
+      "resizeMode": "contain",
     },
     "updates":{
       "fallbackToCacheTimeout": 0
@@ -23,7 +23,8 @@
     }, 
     "android":{
       "package": "com.pmkidz.initialApp",
-      "versionCode": 9
+      "versionCode": 9, 
+      "useNextNotificationsApi": true
     }
   }
 }
